--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="canonical" href="https://90million.in/">
     <meta name="description" content="90Million Coffee in Kaloor, Kochi. Specialty coffee, artisan croissants, and luxurious hot chocolate. Opening September 2025.">
 <meta property="og:title" content="90Million Coffee">
 <meta property="og:description" content="Where every moment matters. Specialty Coffee • Artisan Croissants • Hot Chocolate">
