--- a/index.html
+++ b/index.html
@@ -16,72 +16,52 @@
   </style>
 </head>
 <body class="bg-white text-gray-900">
-<!-- Navbar -->
-<header class="fixed top-0 left-0 w-full flex items-center justify-between px-6 md:px-12 py-4 z-50 bg-black/40 backdrop-blur-sm">
-  
-  <!-- Logo on Left -->
-  <div class="flex-shrink-0">
-    <img src="public/assets/logo.png" alt="90Million Coffee Logo" class="h-10 md:h-12">
+  <!-- Navbar -->
+  <header class="fixed top-0 left-0 w-full flex items-center justify-between px-6 md:px-12 py-4 z-50 bg-black/40 backdrop-blur-sm">
+    <!-- Logo on Left -->
+    <a href="#" class="flex-shrink-0">
+      <img src="public/assets/logo.png" alt="90Million Coffee Logo" class="h-10 md:h-12">
+    </a>
+
+    <!-- Desktop Menu (centered) -->
+    <nav class="hidden md:flex flex-1 justify-center space-x-10 text-white font-sans">
+      <a href="#" class="hover:text-amber-400">Home</a>
+      <a href="#gallery" class="hover:text-amber-400">Gallery</a>
+      <a href="#careers" class="hover:text-amber-400">Careers</a>
+      <a href="#contact" class="hover:text-amber-400">Contact</a>
+    </nav>
+
+    <!-- Hamburger Button (mobile only) -->
+    <button id="menu-btn" class="ml-auto flex flex-col space-y-1.5 focus:outline-none md:hidden" aria-label="Open menu">
+      <span class="block w-6 h-0.5 bg-white"></span>
+      <span class="block w-6 h-0.5 bg-white"></span>
+      <span class="block w-6 h-0.5 bg-white"></span>
+    </button>
+  </header>
+
+  <!-- Mobile Side Menu -->
+  <div id="menu" class="fixed top-0 right-0 h-full w-64 bg-white shadow-lg transform translate-x-full transition-transform duration-300 z-50 md:hidden">
+    <div class="flex justify-end p-4">
+      <button id="close-btn" class="text-gray-600 text-2xl" aria-label="Close menu">&times;</button>
+    </div>
+    <nav class="flex flex-col items-start px-6 space-y-4 mt-6">
+      <a href="#" class="text-lg text-gray-800 hover:text-amber-600">Home</a>
+      <a href="#gallery" class="text-lg text-gray-800 hover:text-amber-600">Gallery</a>
+      <a href="#careers" class="text-lg text-gray-800 hover:text-amber-600">Careers</a>
+      <a href="#contact" class="text-lg text-gray-800 hover:text-amber-600">Contact</a>
+    </nav>
   </div>
-
-  <!-- Desktop Menu (centered) -->
-  <nav class="hidden md:flex flex-1 justify-center space-x-10 text-white font-sans">
-    <a href="#" class="hover:text-amber-400">Home</a>
-    <a href="#gallery" class="hover:text-amber-400">Gallery</a>
-    <a href="#careers" class="hover:text-amber-400">Careers</a>
-    <a href="#contact" class="hover:text-amber-400">Contact</a>
-  </nav>
-
-  <!-- Hamburger Button (mobile only) -->
-  <button id="menu-btn" class="ml-auto flex flex-col space-y-1.5 focus:outline-none md:hidden">
-    <span class="block w-6 h-0.5 bg-white"></span>
-    <span class="block w-6 h-0.5 bg-white"></span>
-    <span class="block w-6 h-0.5 bg-white"></span>
-  </button>
-</header>
-
-<!-- Mobile Side Menu -->
-<div id="menu" class="fixed top-0 right-0 h-full w-64 bg-white shadow-lg transform translate-x-full transition-transform duration-300 z-50 md:hidden">
-  <div class="flex justify-end p-4">
-    <button id="close-btn" class="text-gray-600 text-2xl">&times;</button>
-  </div>
-  <nav class="flex flex-col items-start px-6 space-y-4 mt-6">
-    <a href="#" class="text-lg text-gray-800 hover:text-amber-600">Home</a>
-    <a href="#gallery" class="text-lg text-gray-800 hover:text-amber-600">Gallery</a>
-    <a href="#careers" class="text-lg text-gray-800 hover:text-amber-600">Careers</a>
-    <a href="#contact" class="text-lg text-gray-800 hover:text-amber-600">Contact</a>
-  </nav>
-</div>
-
-<!-- Script -->
-<script>
-  const menuBtn = document.getElementById('menu-btn');
-  const menu = document.getElementById('menu');
-  const closeBtn = document.getElementById('close-btn');
-
-  menuBtn.addEventListener('click', () => {
-    menu.classList.remove('translate-x-full');
-    menu.classList.add('translate-x-0');
-  });
-
-  closeBtn.addEventListener('click', () => {
-    menu.classList.remove('translate-x-0');
-    menu.classList.add('translate-x-full');
-  });
-</script>
-
 
   <!-- Hero Section -->
-
-  <section class="relative w-full">
-    <video autoplay muted loop playsinline class="w-full h-[60vh] md:h-[90vh] object-cover brightness-75">
+  <section class="relative w-full pt-20">
+    <video autoplay muted loop playsinline preload="metadata" class="w-full h-[60vh] md:h-[90vh] object-cover brightness-75">
       <source src="public/assets/videos/coffee6.mp4" type="video/mp4">
     </video>
     <div class="absolute inset-0 flex flex-col items-center justify-center text-center text-white px-4">
-      <img src="public/assets/logo.png" class="h-28 sm:h-40 md:h-56 mx-auto mb-6" alt="90Million Coffee Logo">
+      <img src="public/assets/logo.png" class="h-28 sm:h-40 md:h-56 mx-auto mb-6" alt="90Million Coffee Logo" loading="lazy">
       <p class="font-sans text-lg md:text-xl text-white/90 font-light tracking-wider">
-      Coffee • Croissants • Hot Chocolate
-    </p>
+        Coffee • Croissants • Hot Chocolate
+      </p>
     </div>
   </section>
 
@@ -92,32 +72,28 @@
       From buttery croissants to rich hot chocolate, every item is made to bring people closer. 
       A menu that’s simple, but memorable.
     </p>
+
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
       <div class="rounded-xl shadow-lg overflow-hidden">
-        <img src="public/assets/gallery/croissant-stack.jpg" class="w-full h-52 sm:h-80 object-cover" alt="Croissant">
-        <h3 class="text-lg font-semibold mt-4"></h3>
+        <img src="public/assets/gallery/croissant-stack.jpg" class="w-full h-52 sm:h-80 object-cover" alt="Croissant" loading="lazy">
       </div>
       <div class="rounded-xl shadow-lg overflow-hidden">
-      <img src="public/assets/gallery/iced-pour.jpg" class="w-full h-52 sm:h-80 object-cover" alt="Coffee">
-        <h3 class="text-lg font-semibold mt-4"></h3>
+        <img src="public/assets/gallery/iced-pour.jpg" class="w-full h-52 sm:h-80 object-cover" alt="Coffee" loading="lazy">
       </div>
       <div class="rounded-xl shadow-lg overflow-hidden">
-        <img src="public/assets/gallery/hotchocolate.jpg" class="w-full h-20 sm:h-80 object-cover" alt="Hot Chocolate">
-        <h3 class="text-lg font-semibold mt-4"></h3>
+        <img src="public/assets/gallery/hotchocolate.jpg" class="w-full h-20 sm:h-80 object-cover" alt="Hot Chocolate" loading="lazy">
       </div>
     </div>
-     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mt-6">
       <div class="rounded-xl shadow-lg overflow-hidden">
-        <img src="public/assets/gallery/matcha.jpg" class="w-full h-52 sm:h-80 object-cover" alt="Croissant">
-        <h3 class="text-lg font-semibold mt-4"></h3>
+        <img src="public/assets/gallery/matcha.jpg" class="w-full h-52 sm:h-80 object-cover" alt="Matcha" loading="lazy">
       </div>
       <div class="rounded-xl shadow-lg overflow-hidden">
-      <img src="public/assets/gallery/croissant-cut.jpg" class="w-full h-52 sm:h-80 object-cover" alt="Coffee">
-        <h3 class="text-lg font-semibold mt-4"></h3>
+        <img src="public/assets/gallery/croissant-cut.jpg" class="w-full h-52 sm:h-80 object-cover" alt="Croissant cut" loading="lazy">
       </div>
       <div class="rounded-xl shadow-lg overflow-hidden">
-        <img src="public/assets/gallery/latte.jpg" class="w-full h-20 sm:h-80 object-cover" alt="Hot Chocolate">
-        <h3 class="text-lg font-semibold mt-4"></h3>
+        <img src="public/assets/gallery/latte.jpg" class="w-full h-20 sm:h-80 object-cover" alt="Latte" loading="lazy">
       </div>
     </div>
   </section>
@@ -133,7 +109,7 @@
 
   <!-- Careers Section -->
   <section id="careers" class="relative h-[350px] sm:h-[450px] md:h-[550px] flex items-end justify-center overflow-hidden">
-    <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover brightness-50">
+    <video autoplay muted loop playsinline preload="metadata" class="absolute inset-0 w-full h-full object-cover brightness-50">
       <source src="public/assets/videos/careers6.mp4" type="video/mp4">
     </video>
     <div class="relative z-10 text-center text-white mb-10 px-6">
@@ -142,29 +118,46 @@
         We’re building more than a café. We’re building a culture. If you vibe with coffee, people, 
         and good energy, we’d love to meet you.
       </p>
-     <a href="https://forms.gle/8EYwaHiqZ1cST98F6" target="_blank"
-       class="relative inline-block px-6 py-3 text-lg font-serif text-white rounded-2xl 
-              bg-gradient-to-r from-yellow-400 via-yellow-500 to-yellow-600 
-              shadow-lg hover:scale-105 transition-transform">
+      <a href="https://forms.gle/8EYwaHiqZ1cST98F6" target="_blank"
+         class="relative inline-block px-6 py-3 text-lg font-serif text-white rounded-2xl 
+                bg-gradient-to-r from-yellow-400 via-yellow-500 to-yellow-600 
+                shadow-lg hover:scale-105 transition-transform">
         Explore Careers
       </a>
     </div>
   </section>
-   <section id="contact" class="py-16 bg-gray-100 text-center">
-  <h2 class="text-3xl font-medium mb-4">Contact Us</h2>
-  <p class="mb-6">We’d love to hear from you! Reach out to us anytime.</p>
-  
-  <div class="space-y-3">
-    <p>Email: <a href="mailto:hello@90million.in" class="text-amber-600">hello@90million.in</a></p>
-    <p>Phone: <a href="tel:+919876543210" class="text-amber-600">+91 8848719090</a></p>
-    <p>Location: Kaloor, Kochi</p>
-  </div>
-</section>
+
+  <!-- Contact -->
+  <section id="contact" class="py-16 bg-gray-100 text-center">
+    <h2 class="text-3xl font-medium mb-4">Contact Us</h2>
+    <p class="mb-6">We’d love to hear from you! Reach out to us anytime.</p>
+    <div class="space-y-3">
+      <p>Email: <a href="mailto:hello@90million.in" class="text-amber-600">hello@90million.in</a></p>
+      <p>Phone: <a href="tel:+918848719090" class="text-amber-600">+91 8848719090</a></p>
+      <p>Location: Kaloor, Kochi</p>
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer class="bg-gray-100 text-center py-6 mt-10">
     <p class="text-gray-600 text-sm sm:text-base">© 2025 90Million Coffee. All rights reserved.</p>
   </footer>
 
+  <!-- Script -->
+  <script>
+    const menuBtn = document.getElementById('menu-btn');
+    const menu = document.getElementById('menu');
+    const closeBtn = document.getElementById('close-btn');
+
+    menuBtn?.addEventListener('click', () => {
+      menu.classList.remove('translate-x-full');
+      menu.classList.add('translate-x-0');
+    });
+
+    closeBtn?.addEventListener('click', () => {
+      menu.classList.remove('translate-x-0');
+      menu.classList.add('translate-x-full');
+    });
+  </script>
 </body>
 </html>
