--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 
     <!-- Hamburger (mobile) -->
     <button id="menu-btn"
-            class="ml-auto md:hidden inline-flex items-center justify-center w-11 h-11 rounded-lg focus:outline-none focus:ring-2 focus:ring-white/50"
-            aria-label="Open menu">
-      <span class="block w-6 h-0.5 bg-white"></span>
-      <span class="block w-6 h-0.5 bg-white my-1.5"></span>
-      <span class="block w-6 h-0.5 bg-white"></span>
-    </button>
+        class="ml-auto md:hidden flex flex-col items-center justify-center space-y-1.5 w-11 h-11 rounded-lg focus:outline-none focus:ring-2 focus:ring-white/50"
+        aria-label="Open menu">
+  <span class="block w-7 h-0.5 bg-white rounded"></span>
+  <span class="block w-7 h-0.5 bg-white rounded"></span>
+  <span class="block w-7 h-0.5 bg-white rounded"></span>
+</button>
   </header>
 
   <!-- Backdrop for mobile menu -->
