--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <style>
     body { font-family: 'Inter', sans-serif; }
     h1, h2, h3 { font-family: 'Playfair Display', serif; }
-    /* Prevent layout shift when mobile menu locks scroll */
     html, body { height: 100%; }
   </style>
 </head>
@@ -24,40 +23,42 @@
 
   <!-- NAVBAR -->
   <header class="fixed top-0 left-0 w-full flex items-center justify-between px-4 md:px-12 py-3 z-50 bg-black/50 backdrop-blur-sm">
-    <!-- Logo (left) -->
+    <!-- Logo -->
     <a href="#" class="flex-shrink-0">
       <img src="public/assets/logo.png" alt="90Million Coffee Logo" class="h-9 md:h-12">
     </a>
 
-    <!-- Desktop menu (centered) -->
-    <nav class="hidden md:flex flex-1 justify-center space-x-10 text-white font-sans">
+    <!-- Desktop nav (minimal) -->
+    <nav class="hidden md:flex flex-1 justify-center space-x-8 text-white font-sans">
       <a href="#" class="hover:text-amber-400">Home</a>
       <a href="#gallery" class="hover:text-amber-400">Gallery</a>
+      <a href="#about" class="hover:text-amber-400">About</a>
       <a href="#careers" class="hover:text-amber-400">Careers</a>
       <a href="#contact" class="hover:text-amber-400">Contact</a>
     </nav>
 
     <!-- Hamburger (mobile) -->
     <button id="menu-btn"
-        class="ml-auto md:hidden flex flex-col items-center justify-center space-y-1.5 w-11 h-11 rounded-lg focus:outline-none focus:ring-2 focus:ring-white/50"
-        aria-label="Open menu">
-  <span class="block w-7 h-0.5 bg-white rounded"></span>
-  <span class="block w-7 h-0.5 bg-white rounded"></span>
-  <span class="block w-7 h-0.5 bg-white rounded"></span>
-</button>
+      class="ml-auto md:hidden flex flex-col items-center justify-center space-y-1.5 w-11 h-11 rounded-lg focus:outline-none focus:ring-2 focus:ring-white/50"
+      aria-label="Open menu">
+      <span class="block w-7 h-0.5 bg-white rounded"></span>
+      <span class="block w-7 h-0.5 bg-white rounded"></span>
+      <span class="block w-7 h-0.5 bg-white rounded"></span>
+    </button>
   </header>
 
   <!-- Backdrop for mobile menu -->
   <div id="backdrop" class="fixed inset-0 bg-black/50 opacity-0 pointer-events-none transition-opacity duration-200 z-40 md:hidden"></div>
 
   <!-- Mobile Side Menu -->
-  <aside id="menu" class="fixed top-0 right-0 h-full w-72 max-w-[85%] bg-white shadow-xl transform translate-x-full transition-transform duration-300 z-50 md:hidden">
+  <aside id="menu" class="fixed top-0 right-0 h-full w-72 max-w-[85%] bg-white shadow-xl transform translate-x-full transition-transform duration-300 z-50 md:hidden overflow-y-auto">
     <div class="flex justify-end p-4">
       <button id="close-btn" class="w-11 h-11 inline-flex items-center justify-center text-gray-700 text-2xl" aria-label="Close menu">&times;</button>
     </div>
     <nav class="flex flex-col items-start px-6 space-y-3 mt-2 text-lg">
       <a href="#" class="py-2 w-full hover:text-amber-600">Home</a>
       <a href="#gallery" class="py-2 w-full hover:text-amber-600">Gallery</a>
+      <a href="#about" class="py-2 w-full hover:text-amber-600">About</a>
       <a href="#careers" class="py-2 w-full hover:text-amber-600">Careers</a>
       <a href="#contact" class="py-2 w-full hover:text-amber-600">Contact</a>
     </nav>
@@ -65,21 +66,13 @@
 
   <!-- HERO -->
   <section class="relative w-full pt-20">
-    <!-- Mobile: poster image for instant paint -->
-    <img
-      src="public/assets/gallery/latte.jpg"
-      alt="90Million Coffee"
-      class="block md:hidden w-full h-[68vh] object-cover brightness-75"
-      loading="eager"
-    />
-
-    <!-- Desktop: autoplay video -->
+    <img src="public/assets/gallery/latte.jpg" alt="90Million Coffee"
+         class="block md:hidden w-full h-[68vh] object-cover brightness-75" loading="eager" />
     <video autoplay muted loop playsinline preload="metadata"
            class="hidden md:block w-full h-[90vh] object-cover brightness-75"
            poster="public/assets/gallery/latte.jpg">
       <source src="public/assets/videos/coffee6.mp4" type="video/mp4">
     </video>
-
     <div class="absolute inset-0 flex flex-col items-center justify-center text-center text-white px-4">
       <img src="public/assets/logo.png" class="h-24 sm:h-32 md:h-56 mx-auto mb-4 md:mb-6" alt="90Million Coffee Logo" loading="lazy">
       <p class="font-sans text-base sm:text-lg md:text-xl text-white/90 font-light tracking-wider">
@@ -88,15 +81,13 @@
     </div>
   </section>
 
-  <!-- GALLERY / MENU -->
+  <!-- GALLERY -->
   <section id="gallery" class="py-12 sm:py-14 md:py-16 px-4 sm:px-6 md:px-16 bg-gray-50 text-center">
     <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-4 sm:mb-6">Crafted With Passion</h2>
     <p class="max-w-2xl mx-auto text-base sm:text-lg md:text-xl text-gray-700 mb-8 sm:mb-12">
       From buttery croissants to rich hot chocolate, every item is made to bring people closer.
       A menu that’s simple, but memorable.
     </p>
-
-    <!-- Row 1 -->
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 sm:gap-6">
       <div class="rounded-xl shadow-lg overflow-hidden">
         <img src="public/assets/gallery/croissant-stack.jpg" class="w-full aspect-[4/3] object-cover" alt="Croissant" loading="lazy">
@@ -105,11 +96,9 @@
         <img src="public/assets/gallery/iced-pour.jpg" class="w-full aspect-[4/3] object-cover" alt="Coffee" loading="lazy">
       </div>
       <div class="rounded-xl shadow-lg overflow-hidden">
-        <img src="public/assets/gallery/iced-coffee.jpg" class="w-full aspect-[4/3] object-cover" alt="Hot Chocolate" loading="lazy">
+        <img src="public/assets/gallery/iced-coffee.jpg" class="w-full aspect-[4/3] object-cover" alt="Iced Coffee" loading="lazy">
       </div>
     </div>
-
-    <!-- Row 2 -->
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 sm:gap-6 mt-6">
       <div class="rounded-xl shadow-lg overflow-hidden">
         <img src="public/assets/gallery/matcha.jpg" class="w-full aspect-[4/3] object-cover" alt="Matcha" loading="lazy">
@@ -132,17 +121,71 @@
     </p>
   </section>
 
+  <!-- ABOUT anchor -->
+  <div id="about" style="scroll-margin-top:96px;"></div>
+
+  <!-- OUR COFFEE -->
+  <section id="coffee" class="py-16 px-6 md:px-16 bg-gray-50 text-center">
+    <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-6">Our Coffee</h2>
+    <p class="max-w-2xl mx-auto text-base sm:text-lg md:text-xl text-gray-700">
+      Espresso here is pure — built on <strong>100% Arabica beans from Lavazza, Italy</strong>.  
+      For manual brews, we go local: <strong>single-origin beans from India’s best estates</strong>,  
+      making every cup a quiet mission to support farmers and preserve India’s coffee heritage.
+    </p>
+  </section>
+
+  <!-- OUR HOT CHOCOLATE -->
+  <section id="hotchocolate" class="py-16 px-6 md:px-16 bg-white text-center">
+    <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-6">Our Hot Chocolate</h2>
+    <p class="max-w-2xl mx-auto text-base sm:text-lg md:text-xl text-gray-700">
+      More than comfort — it’s craft.  
+      Our hot chocolate is made with <strong>single-origin cacao</strong>,  
+      whisked into rich, velvety cups that carry the story of the farms they come from.  
+      It’s indulgence done right — pure, deep, and unforgettable.
+    </p>
+  </section>
+
+  <!-- OUR CROISSANTS -->
+  <section id="croissants" class="py-16 px-6 md:px-16 bg-gray-50 text-center">
+    <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-6">Our Croissants</h2>
+    <p class="max-w-2xl mx-auto text-base sm:text-lg md:text-xl text-gray-700">
+      Croissants aren’t just pastries here — they’re a ritual.  
+      Made in-house at our <strong>central kitchen</strong>, rolled and baked by us — Sahil &amp; Shany —  
+      using a <strong>3-year-old sourdough starter</strong>. Slow-fermented, folded with care, baked golden.  
+      Tradition meeting obsession.
+    </p>
+  </section>
+
+  <!-- SUSTAINABILITY -->
+  <section id="sustainability" class="py-16 px-6 md:px-16 bg-white text-center">
+    <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-6">Sustainability</h2>
+    <p class="max-w-2xl mx-auto text-base sm:text-lg md:text-xl text-gray-700">
+      We don’t “minimize” plastic. We don’t use it — period.  
+      From <strong>cornstarch straws</strong> to paper-first packaging,  
+      sustainability is baked into every detail — just like butter in our croissants.  
+      Cafés should nourish, not pollute.
+    </p>
+  </section>
+
+  <!-- THE 90MILLION WAY -->
+  <section id="the90mway" class="py-16 px-6 md:px-16 bg-gray-50 text-center">
+    <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-6">The 90Million Way</h2>
+    <p class="max-w-2xl mx-auto text-base sm:text-lg md:text-xl text-gray-700">
+      We’re not chasing trends. We’re building a space that lasts.  
+      A place where you can <strong>drink better, eat better, live better</strong>.  
+      A space for conversations, pauses, and possibilities.  
+      This is what 90Million is about — timeless, thoughtful, and true.
+    </p>
+  </section>
+
   <!-- CAREERS -->
   <section id="careers" class="relative flex items-end justify-center overflow-hidden h-[420px] sm:h-[480px] md:h-[550px]">
-    <!-- Mobile: still -->
     <img src="public/assets/gallery/croissant-cut.jpg" alt="" class="block md:hidden absolute inset-0 w-full h-full object-cover brightness-60">
-    <!-- Desktop: video -->
     <video autoplay muted loop playsinline preload="metadata"
            class="hidden md:block absolute inset-0 w-full h-full object-cover brightness-50"
            poster="public/assets/gallery/croissant-cut.jpg">
       <source src="public/assets/videos/careers6.mp4" type="video/mp4">
     </video>
-
     <div class="relative z-10 text-center text-white mb-8 px-5 w-full max-w-2xl">
       <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-3">Join the Team</h2>
       <p class="text-sm sm:text-base md:text-lg mb-4">
@@ -173,7 +216,6 @@
 
   <!-- SCRIPTS -->
   <script>
-    // Mobile menu controls
     const body = document.body;
     const menuBtn = document.getElementById('menu-btn');
     const menu = document.getElementById('menu');
@@ -197,26 +239,6 @@
     closeBtn?.addEventListener('click', closeMenu);
     backdrop?.addEventListener('click', closeMenu);
     document.querySelectorAll('#menu a').forEach(a => a.addEventListener('click', closeMenu));
-
-    // Broken image fallback + console log
-    const fallbackPlaceholder =
-      "data:image/svg+xml;charset=UTF-8," +
-      encodeURIComponent(`
-        <svg xmlns="http://www.w3.org/2000/svg" width="400" height="300">
-          <rect width="100%" height="100%" fill="#e5e7eb"/>
-          <text x="50%" y="50%" font-size="20" text-anchor="middle" fill="#9ca3af" dy=".3em">
-            Image not found
-          </text>
-        </svg>
-      `);
-
-    document.querySelectorAll("img").forEach(img => {
-      img.addEventListener("error", () => {
-        console.warn("❌ Broken image:", img.src, "| alt:", img.alt);
-        img.src = fallbackPlaceholder;
-        img.classList.add("object-contain","bg-gray-100","p-4");
-      });
-    });
   </script>
 </body>
 </html>
