--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>90Million Coffee</title>
 
+  <!-- Meta Description -->
+  <meta name="description" content="90Million Coffee in Kochi — specialty coffee with 100% Arabica beans from Lavazza, single-origin Indian brews, artisan croissants baked in-house, and rich single-origin hot chocolate. A space for connection.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="90Million Coffee — Specialty Café in Kochi">
+  <meta property="og:description" content="Coffee • Croissants • Hot Chocolate. Born from passion, brewed with purpose.">
+  <meta property="og:image" content="https://90million.in/public/assets/gallery/croissant-stack.jpg">
+  <meta property="og:url" content="https://90million.in/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="90Million Coffee — Specialty Café in Kochi">
+  <meta name="twitter:description" content="Coffee • Croissants • Hot Chocolate. Born from passion, brewed with purpose.">
+  <meta name="twitter:image" content="https://90million.in/public/assets/gallery/croissant-stack.jpg">
+
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -28,7 +44,7 @@
       <img src="public/assets/logo.png" alt="90Million Coffee Logo" class="h-9 md:h-12">
     </a>
 
-    <!-- Desktop nav (minimal) -->
+    <!-- Desktop nav -->
     <nav class="hidden md:flex flex-1 justify-center space-x-8 text-white font-sans">
       <a href="#" class="hover:text-amber-400">Home</a>
       <a href="#gallery" class="hover:text-amber-400">Gallery</a>
