--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
     <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-6">Our Croissants</h2>
     <p class="max-w-2xl mx-auto text-base sm:text-lg md:text-xl text-gray-700">
       Croissants aren’t just pastries here — they’re a ritual.  
-      Made in-house at our <strong>central kitchen</strong>, rolled and baked by us — folded with care, baked golden.  
+      Made in-house at our <strong>central kitchen</strong>, rolled and baked by us — Sahil &amp; Shany —  
+      using a <strong>3-year-old sourdough starter</strong>. Slow-fermented, folded with care, baked golden.  
       Tradition meeting obsession.
     </p>
   </section>
