--- a/index.html
+++ b/index.html
@@ -165,10 +165,9 @@
   <section id="croissants" class="py-16 px-6 md:px-16 bg-gray-50 text-center">
     <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-6">Our Croissants</h2>
     <p class="max-w-2xl mx-auto text-base sm:text-lg md:text-xl text-gray-700">
-      Croissants aren’t just pastries here — they’re a ritual.  
-      Made in-house at our <strong>central kitchen</strong>, rolled and baked by us — Sahil &amp; Shany —  
-      using a <strong>3-year-old sourdough starter</strong>. Slow-fermented, folded with care, baked golden.  
-      Tradition meeting obsession.
+      Croissants aren’t just pastries here — they’re pure craft.
+      Made in-house at our <strong>central kitchen</strong>, each one is carefully rolled, folded into buttery layers, and baked fresh every single day. 
+      Golden on the outside, soft within — every bite is the result of patience, precision, and passion.
     </p>
   </section>
 
