--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     </video>
     <div class="relative z-10 text-center text-white mb-8 px-5 w-full max-w-2xl">
       <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-3">Join the Team</h2>
-      <p class="text-sm sm:text-base md:text-lg mb-4">
+     <p class="text-sm sm:text-base md:text-lg font-serif mb-4">
         We’re building more than a café. We’re building a culture. If you vibe with coffee, people, and good energy, we’d love to meet you.
       </p>
       <a href="https://forms.gle/8EYwaHiqZ1cST98F6" target="_blank"
