--- a/index.html
+++ b/index.html
@@ -165,9 +165,10 @@
   <section id="croissants" class="py-16 px-6 md:px-16 bg-gray-50 text-center">
     <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-6">Our Croissants</h2>
     <p class="max-w-2xl mx-auto text-base sm:text-lg md:text-xl text-gray-700">
-      Croissants aren’t just pastries here — they’re pure craft.
-      Made in-house at our <strong>central kitchen</strong>, each one is carefully rolled, folded into buttery layers, and baked fresh every single day. 
-      Golden on the outside, soft within — every bite is the result of patience, precision, and passion.
+      Croissants aren’t just pastries here — they’re a ritual.  
+      Made in-house at our <strong>central kitchen</strong>, rolled and baked by us — Sahil &amp; Shany —  
+      using a <strong>3-year-old sourdough starter</strong>. Slow-fermented, folded with care, baked golden.  
+      Tradition meeting obsession.
     </p>
   </section>
 
@@ -203,7 +204,7 @@
     </video>
     <div class="relative z-10 text-center text-white mb-8 px-5 w-full max-w-2xl">
       <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-3">Join the Team</h2>
-     <p class="text-sm sm:text-base md:text-lg font-serif mb-4">
+      <p class="text-sm sm:text-base md:text-lg font-serif mb-4">
         We’re building more than a café. We’re building a culture. If you vibe with coffee, people, and good energy, we’d love to meet you.
       </p>
       <a href="https://forms.gle/8EYwaHiqZ1cST98F6" target="_blank"
@@ -218,8 +219,10 @@
     <h2 class="text-3xl font-medium mb-4">Contact Us</h2>
     <p class="mb-6">We’d love to hear from you! Reach out to us anytime.</p>
     <div class="space-y-3">
-      <p>Email: <a href="mailto:hello@90million.in" class="text-amber-600">hello@90million.in</a></p>
+     <p>Email: <a href="mailto:hello@90million.in" class="text-amber-600">hello@90million.in</a></p>
       <p>Phone: <a href="tel:+918848719090" class="text-amber-600">+91 8848719090</a></p>
+  <p><a href="https://wa.me/918848719090" target="_blank" class="text-amber-600">Chat on WhatsApp</a></p>
+  <p><a href="https://instagram.90million.in" target="_blank" class="text-amber-600">Follow us on Instagram</a></p>
       <p>Location: Kaloor, Kochi</p>
     </div>
   </section>
