--- a/index.html
+++ b/index.html
@@ -165,10 +165,8 @@
   <section id="croissants" class="py-16 px-6 md:px-16 bg-gray-50 text-center">
     <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-6">Our Croissants</h2>
     <p class="max-w-2xl mx-auto text-base sm:text-lg md:text-xl text-gray-700">
-      Croissants aren’t just pastries here — they’re a ritual.  
-      Made in-house at our <strong>central kitchen</strong>, rolled and baked by us — Sahil &amp; Shany —  
-      using a <strong>3-year-old sourdough starter</strong>. Slow-fermented, folded with care, baked golden.  
-      Tradition meeting obsession.
+      Not frozen. Not yesterday. Our croissants are rolled, layered, and baked fresh at our <strong>central kitchen</strong> every single day. 
+      <strong>Buttery, flaky, honeycombed</strong> perfection — the way they’re meant to be.
     </p>
   </section>
 
