--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="canonical" href="https://90million.in/">
 
   <!-- FAVICONS -->
-  <link rel="icon" href="/favicon.png" type="image/png">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="icon" href="public/assets/favicon.png" type="image/png">
+  <link rel="apple-touch-icon" href="public/assets//apple-touch-icon.png">
   <meta name="theme-color" content="#111827">
 
   <!-- Meta Description (SEO-friendly, punchy) -->
