--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>90MILLION COFFEE — Specialty Café in Kochi | Croissants • Coffee • Hot Chocolate</title>
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://90million.in/">
+  <link rel="canonical" href="90Million Coffee">
 
   <!-- FAVICONS -->
   <link rel="icon" href="public/assets/favicon.png" type="image/png">
@@ -212,7 +212,7 @@
   <section id="coffee" class="py-16 px-6 md:px-16 bg-gray-50 text-center">
     <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-6">Our Coffee</h2>
     <p class="max-w-2xl mx-auto text-base sm:text-lg md:text-xl text-gray-700">
-      Espresso here is pure — built on <strong>100% Arabica beans from Lavazza, Italy</strong>.  
+      Espresso here is pure — built on <strong>100% Arabica beans from Chikkamagaluru</strong>.  
       For manual brews, we go local: <strong>single-origin beans from India’s best estates</strong>,  
       making every cup a quiet mission to support farmers and preserve India’s coffee heritage.
     </p>
@@ -244,7 +244,7 @@
   <section id="sustainability" class="py-16 px-6 md:px-16 bg-white text-center">
     <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-6">Sustainability</h2>
     <p class="max-w-2xl mx-auto text-base sm:text-lg md:text-xl text-gray-700">
-      We don’t “minimize” plastic. We don’t use it — period.  
+      We don’t “minimize” plastic. We mostly don’t use it — period.  
       From <strong>cornstarch straws</strong> to paper-first packaging,  
       sustainability is baked into every detail — just like butter in our croissants.  
       Cafés should nourish, not pollute.
