--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <p class="max-w-2xl mx-auto text-base sm:text-lg md:text-xl text-gray-700">
       Croissants aren’t just pastries here — they’re a ritual.  
       Made in-house at our <strong>central kitchen</strong>, rolled and baked by us — Sahil &amp; Shany —  
-      using a <strong>3-year-old sourdough starter</strong>. Slow-fermented, folded with care, baked golden.  
+      Slow-fermented, folded with care, baked golden.  
       Tradition meeting obsession.
     </p>
   </section>
